<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Music Player</string>
    <string name="folders">Folders</string>
    <string name="no_songs">No music found on this device</string>
    <string name="no_track">No track selected</string>
    <string name="permission_needed">Audio permission is required to show your music</string>
    <string name="play_pause">Play or pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="shuffle">Shuffle</string>
    <string name="back">Back</string>
    <string name="now_playing">Now playing</string>

    <plurals name="track_count">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
</resources>
